--- a/notebooks/IMDB_reviews_Sentiment_analysis_LSTM.ipynb
+++ b/notebooks/IMDB_reviews_Sentiment_analysis_LSTM.ipynb
@@ -55,7 +55,7 @@
       "metadata": {
         "id": "_FHZW0gWDZw3"
       },
-      "execution_count": 1,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -79,28 +79,37 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 356
+          "base_uri": "https://localhost:8080/"
         },
         "id": "iI_ekXjJG-DN",
-        "outputId": "b4e0c034-fe97-45f4-9978-79ca3eae1e38"
+        "outputId": "d5c879ce-6b1e-492a-f0dd-f7518b764c10"
       },
-      "execution_count": 2,
+      "execution_count": 21,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "FileNotFoundError",
-          "evalue": "[Errno 2] No such file or directory: '/content/IMDB_Dataset.csv'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-960432078.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/content/IMDB_Dataset.csv'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtail\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0misnull\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/pandas/io/parsers/readers.py\u001b[0m in \u001b[0;36mread_csv\u001b[0;34m(filepath_or_buffer, sep, delimiter, header, names, index_col, usecols, dtype, engine, converters, true_values, false_values, skipinitialspace, skiprows, skipfooter, nrows, na_values, keep_default_na, na_filter, verbose, skip_blank_lines, parse_dates, infer_datetime_format, keep_date_col, date_parser, date_format, dayfirst, cache_dates, iterator, chunksize, compression, thousands, decimal, lineterminator, quotechar, quoting, doublequote, escapechar, comment, encoding, encoding_errors, dialect, on_bad_lines, delim_whitespace, low_memory, memory_map, float_precision, storage_options, dtype_backend)\u001b[0m\n\u001b[1;32m   1024\u001b[0m     \u001b[0mkwds\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkwds_defaults\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1025\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1026\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0m_read\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilepath_or_buffer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkwds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1027\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1028\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/pandas/io/parsers/readers.py\u001b[0m in \u001b[0;36m_read\u001b[0;34m(filepath_or_buffer, kwds)\u001b[0m\n\u001b[1;32m    618\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    619\u001b[0m     \u001b[0;31m# Create the parser.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 620\u001b[0;31m     \u001b[0mparser\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mTextFileReader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilepath_or_buffer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    621\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    622\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mchunksize\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0miterator\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/pandas/io/parsers/readers.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, f, engine, **kwds)\u001b[0m\n\u001b[1;32m   1618\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1619\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhandles\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mIOHandles\u001b[0m \u001b[0;34m|\u001b[0m \u001b[0;32mNone\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1620\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_make_engine\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mengine\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1621\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1622\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/pandas/io/parsers/readers.py\u001b[0m in \u001b[0;36m_make_engine\u001b[0;34m(self, f, engine)\u001b[0m\n\u001b[1;32m   1878\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0;34m\"b\"\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1879\u001b[0m                     \u001b[0mmode\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;34m\"b\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1880\u001b[0;31m             self.handles = get_handle(\n\u001b[0m\u001b[1;32m   1881\u001b[0m                 \u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1882\u001b[0m                 \u001b[0mmode\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/pandas/io/common.py\u001b[0m in \u001b[0;36mget_handle\u001b[0;34m(path_or_buf, mode, encoding, compression, memory_map, is_text, errors, storage_options)\u001b[0m\n\u001b[1;32m    871\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mioargs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mencoding\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0;34m\"b\"\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mioargs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmode\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    872\u001b[0m             \u001b[0;31m# Encoding\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 873\u001b[0;31m             handle = open(\n\u001b[0m\u001b[1;32m    874\u001b[0m                 \u001b[0mhandle\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    875\u001b[0m                 \u001b[0mioargs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmode\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/content/IMDB_Dataset.csv'"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(50000, 2)\n",
+            "                                              review sentiment\n",
+            "0  One of the other reviewers has mentioned that ...  positive\n",
+            "1  A wonderful little production. <br /><br />The...  positive\n",
+            "2  I thought this was a wonderful way to spend ti...  positive\n",
+            "3  Basically there's a family where a little boy ...  negative\n",
+            "4  Petter Mattei's \"Love in the Time of Money\" is...  positive\n",
+            "                                                  review sentiment\n",
+            "49995  I thought this movie did a down right good job...  positive\n",
+            "49996  Bad plot, bad dialogue, bad acting, idiotic di...  negative\n",
+            "49997  I am a Catholic taught in parochial elementary...  negative\n",
+            "49998  I'm going to have to disagree with the previou...  negative\n",
+            "49999  No one expects the Star Trek movies to be high...  negative\n",
+            "review       0\n",
+            "sentiment    0\n",
+            "dtype: int64\n",
+            "sentiment\n",
+            "positive    25000\n",
+            "negative    25000\n",
+            "Name: count, dtype: int64\n"
           ]
         }
       ]
@@ -112,10 +121,33 @@
         "print(data[\"sentiment\"].value_counts())"
       ],
       "metadata": {
-        "id": "dBd6aGJKJ38a"
+        "id": "dBd6aGJKJ38a",
+        "outputId": "7ec1c17b-3368-40ba-ca0b-ebf938819b89",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "sentiment\n",
+            "1    25000\n",
+            "0    25000\n",
+            "Name: count, dtype: int64\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/tmp/ipython-input-2055439680.py:1: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+            "  data.replace({\"sentiment\": {\"positive\": 1, \"negative\": 0}}, inplace=True)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -125,10 +157,23 @@
         "print(test_data.shape)"
       ],
       "metadata": {
-        "id": "zmRTk2XBKx2T"
+        "id": "zmRTk2XBKx2T",
+        "outputId": "eb11aa8e-925f-40e8-b0b4-593be46b9150",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(40000, 2)\n",
+            "(10000, 2)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -160,10 +205,42 @@
         "print(test_data['review'].head())"
       ],
       "metadata": {
-        "id": "Yuo501bARfSb"
+        "id": "Yuo501bARfSb",
+        "outputId": "340b9435-f0f1-4fc7-f9ae-fe989801b82c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
+            "[nltk_data]   Package stopwords is already up-to-date!\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Reviews after removing stopwords:\n",
+            "39087    thats kept asking many fights screaming matche...\n",
+            "30893    watch entire movie could watch entire movie st...\n",
+            "45278    touching love story reminiscent mood love draw...\n",
+            "16398    latterday fulci schlocker totally abysmal conc...\n",
+            "13653    first firmly believe norwegian movies continua...\n",
+            "Name: review, dtype: object\n",
+            "33553    really liked summerslam due look arena curtain...\n",
+            "9427     many television shows appeal quite many differ...\n",
+            "199      film quickly gets major chase scene ever incre...\n",
+            "12447    jane austen would definitely approve onebr br ...\n",
+            "39489    expectations somewhat high went see movie thou...\n",
+            "Name: review, dtype: object\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -178,10 +255,35 @@
         "print(X_test)"
       ],
       "metadata": {
-        "id": "B40kiBq4Li75"
+        "id": "B40kiBq4Li75",
+        "outputId": "08fc84b1-5d13-4ca1-9330-dba4ed3078b7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[   0    0    0 ...  112  231 3646]\n",
+            " [   0    0    0 ...  104   21   30]\n",
+            " [   0    0    0 ...  201  605   12]\n",
+            " ...\n",
+            " [   0    0    0 ... 1009 1481  516]\n",
+            " [   0    0    0 ... 1138  143   30]\n",
+            " [   0    0    0 ...  370   13 1811]]\n",
+            "[[   0    0    0 ...  171   94  849]\n",
+            " [   0    0    0 ... 1758   11    1]\n",
+            " [   0    0    0 ...  829  939   22]\n",
+            " ...\n",
+            " [   0    0    0 ...  481   92 3183]\n",
+            " [   0    0    0 ...  118   69 2089]\n",
+            " [   0    0    0 ...   11  224    4]]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -193,10 +295,45 @@
         "print(Y_test)"
       ],
       "metadata": {
-        "id": "LxwqXDoIO2fM"
+        "id": "LxwqXDoIO2fM",
+        "outputId": "57ffa525-7bca-4afe-f396-c16e1ba47b43",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "39087    0\n",
+            "30893    0\n",
+            "45278    1\n",
+            "16398    0\n",
+            "13653    0\n",
+            "        ..\n",
+            "11284    1\n",
+            "44732    1\n",
+            "38158    0\n",
+            "860      1\n",
+            "15795    1\n",
+            "Name: sentiment, Length: 40000, dtype: int64\n",
+            "33553    1\n",
+            "9427     1\n",
+            "199      0\n",
+            "12447    1\n",
+            "39489    0\n",
+            "        ..\n",
+            "28567    0\n",
+            "25079    1\n",
+            "18707    1\n",
+            "15200    0\n",
+            "5857     1\n",
+            "Name: sentiment, Length: 10000, dtype: int64\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -204,7 +341,7 @@
       "metadata": {
         "id": "W7fgzv9QO-7o"
       },
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": []
     }
   ]
